# bincalc

./: .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  README.md  bincalc.cpp  bincalc.h  bincalc.pro  bincalc.ui  calculator_core.cpp  calculator_core.h  main.cpp  numeric_formats.cpp  numeric_formats.h  resources.qrc  tests.cpp  tests.pro
.github/workflows/: ci.yml  release.yml
scripts/: clean.sh  release.ps1  release.sh
